Added easing options for slideOver

--- a/README
+++ b/README
@@ -27,6 +27,7 @@ Usage
 $('#news').innerfade({ 
 	animationtype: Type of animation 'fade', 'slide' or 'slideOver' (Default: 'fade'), 
 	speed: Fading-/Sliding-Speed in milliseconds or keywords (slow, normal or fast) (Default: 'normal'), 
+	easing: Type of easing for slideOver. jQuery comes with 'linear' and 'swing', but you can use other plugins (Default: 'linear'),
 	timeout: Time between the fades in milliseconds (Default: '2000'), 
 	type: Type of slideshow: 'sequence', 'random' or 'random_start' (Default: 'sequence'), 
 	containerheight: Height of the containing element in any css-height-value (Default: 'auto'),
