Removed line breaks from README

--- a/README.textile
+++ b/README.textile
@@ -1,8 +1,8 @@
 h1. jquery.innerfade.js
 
-*Date:* 2009-03-04<br />
-*Author:* Wes Baker<br />
-*Mail:* wes@newcitymedia.com<br />
+*Date:* 2009-03-04
+*Author:* Wes Baker
+*Mail:* wes@newcitymedia.com
 *Web:* "http://www.newcitymedia.com":http://www.newcitymedia.com
 
 Based on the work of Torsten Baldes "http://medienfreunde.com":http://medienfreunde.com, Matt Oakes "http://portfolio.gizone.co.uk/applications/slideshow/":http://portfolio.gizone.co.uk/applications/slideshow/ and Ralf S. Engelschall "http://trainofthoughts.org/":http://trainofthoughts.org/
