--- a/README.textile
+++ b/README.textile
@@ -24,14 +24,14 @@ h2. Something Like What it'll be expecting
 h2. Usage
 
 <pre><code>$('#news').innerFade({ 
-	animationtype: Type of animation 'fade', 'slide' or 'slideOver' (Default: 'fade'), 
+	animationType: Type of animation 'fade', 'slide' or 'slideOver' (Default: 'fade'), 
 	speed: Fading-/Sliding-Speed in milliseconds or keywords (slow, normal or fast) (Default: 'normal'), 
 	easing: Type of easing for slideOver. jQuery comes with 'linear' and 'swing', but you can use other plugins (Default: 'linear'),
 	timeout: Time between the fades in milliseconds (Default: '2000'), 
+	loop: Whether to keep looping after the slideshow has gone through once (Default: true),
 	type: Type of slideshow: 'sequence', 'random' or 'random_start' (Default: 'sequence'), 
-	containerheight: Height of the containing element in any css-height-value (Default: 'auto'),
-	containerwidth: Width of the containing element in pixels, this needs to be set for slideOver (Default: null),
-	runningclass: CSS-Class which the container get’s applied (Default: 'innerfade'),
+	containerHeight: Height of the containing element in any css-height-value (Default: 'auto'),
+	runningClass: CSS-Class which the container get’s applied (Default: 'innerfade'),
 	children: optional children selector (Default: null),
 	cancelLink: Optional cancel link selector (Default: '.cancel'),
 	pauseLink: Optional pause link selector (Default: '.pause'),
