--- a/README.textile
+++ b/README.textile
@@ -25,20 +25,25 @@ h2. Usage
 
 <pre><code>$('#news').innerFade({ 
 	animationType: Type of animation 'fade', 'slide' or 'slideOver' (Default: 'fade'), 
+	animate: Whether to animate the slideshow or not (Default: true),
 	speed: Fading-/Sliding-Speed in milliseconds or keywords (slow, normal or fast) (Default: 'normal'), 
 	easing: Type of easing for slideOver. jQuery comes with 'linear' and 'swing', but you can use other plugins (Default: 'linear'),
 	timeout: Time between the fades in milliseconds (Default: '2000'), 
 	startDelay: Time before the first slide change (Default: '0'),
 	loop: Whether to keep looping after the slideshow has gone through once (Default: true),
-	type: Type of slideshow: 'sequence', 'random' or 'random_start' (Default: 'sequence'), 
+	type: Type of slideshow: 'sequence', 'random' or 'random_start' (Default: 'sequence'),
+
 	containerHeight: Height of the containing element in any css-height-value (Default: 'auto'),
-	runningClass: CSS-Class which the container get’s applied (Default: 'innerfade'),
+	runningClass: CSS Class which the container get’s applied (Default: 'innerfade'),
 	children: optional children selector (Default: null),
+	
 	cancelLink: Optional cancel link selector (Default: '.cancel'),
 	pauseLink: Optional pause link selector (Default: '.pause'),
 	prevLink: Optional previous link selector (Default: '.prev'),
 	nextLink: Optional next link selector (Default: '.next'),
+	
 	indexContainer: Optional index container selector, indexes are direct links to individual slides (Default: null),
+	
 	currentItemContainer: Optional container for the current item number (Default: null),
 	totalItemsContainer: Optional container for the total item number (Default: null)
 });</code></pre>
